# RSienaTest

./: .gitignore  ChangeLog  DESCRIPTION  NAMESPACE  README.md  configure  configure.ac
R/: CInterface.r  Sienatest.r  algorithms.r  bayesTest.r  document.r  effects.r  effectsDocumentation.r  effectsMethods.r  fastCluster.r  formula.R  globals.r  initializeFRAN.r  maxlikec.r  phase2.r  phase3.r  robmon.r  runit.r  siena07.r  siena08.r  sienaBayes.r  sienaDataCreate.r  sienaDataCreateFromSession.r  sienaGOF.r  sienaModelCreate.r  sienaTimeTest.r  sienaeffects.r  sienaprint.r  sienatable.r  zzz.R
data/: allEffects.csv
inst/: CITATION  sienascript
inst/examples/: runalg.r
inst/scripts/: Rscript01DataFormat.R
inst/unitTests/: asserts.R  behaviorObjective.Rd  covarNonSymmetricObjective.Rd  covarSymmetricObjective.Rd  effect.persistence.test.R  model.persistence.test.R  nonSymmetricObjective.Rd  symmetricObjective.Rd
man/: CInterface.Rd  RSiena-package.Rd  Wald.Rd  algorithms.Rd  bayesTest.Rd  coCovar.Rd  effectsDocumentation.Rd  extract.sienaBayes.Rd  getEffects.Rd  includeEffects.Rd  includeInteraction.Rd  print.sienaBayesFit.Rd  print.sienaEffects.Rd  print.sienaMeta.Rd  print.sienaTest.Rd  profileLikelihoods.Rd  setEffect.Rd  siena07.Rd  siena08.Rd  sienaAlgorithmCreate.Rd  sienaBayes.Rd  sienaDataCreateFromSession.Rd  sienaDependent.Rd  sienaFit.Rd  sienaGOF-auxiliary.Rd  sienaGOF.Rd  sienaGroupCreate.Rd  sienaRI.Rd  sienaRIDynamics.Rd  sienaTimeTest.Rd  simstats0c.Rd  varCovar.Rd
po/: R-RSienaTest.pot
src/: Makevars.in  RInterface.cpp  RInterface.h  RUtil.cpp  RUtil.h  init.cpp  siena07internals.cpp  siena07internals.h  siena07models.cpp  siena07setup.cpp  siena07utilities.cpp  sources.list
src/Eigen/: RLegacy.cpp  RLegacy.h  Types.h  Util.h
src/estimator/: Controller.cpp  Controller.h  GMMEstimator.cpp  GMMEstimator.h  SienaFit.cpp  SienaFit.h
src/estimator/components/: NSimCollector.cpp  NSimCollector.h  ParameterSum.cpp  ParameterSum.h  PeriodWiseScoreCollector.cpp  PeriodWiseScoreCollector.h  PeriodWiseStatisticsCollector.cpp  PeriodWiseStatisticsCollector.h  ScoreCollector.cpp  ScoreCollector.h  StatisticCollector.cpp  StatisticCollector.h  TimesCollector.cpp  TimesCollector.h
src/estimator/derivative/: Differentiation.cpp  Differentiation.h  DifferentiationController.cpp  DifferentiationController.h  DifferentiationType.h  FiniteDifference.cpp  FiniteDifference.h  MLDifferentiation.cpp  MLDifferentiation.h  ScoreDeviation.cpp  ScoreDeviation.h
src/estimator/listener/: EstimatorListener.cpp  EstimatorListener.h
src/estimator/test/: StaticController.cpp  StaticController.h
src/estimator/update/: StopCondition.cpp  StopCondition.h  UpdateController.cpp  UpdateController.h
src/logger/: LogEntry.cpp  LogEntry.h  Logger.h  Priority.cpp  Priority.h
src/logger/appender/: Appender.h  AppenderPool.cpp  AppenderPool.h  ConsoleAppender.h  FileAppender.cpp  FileAppender.h  RConsoleAppender.h
src/logger/filter/: AndFilter.h  Filter.h  OpenMPThreadFilter.h  PrefixFilter.h  PriorityRangeFilter.h
src/logger/formatter/: Formatter.h  MPIAwareFormatter.cpp  MPIAwareFormatter.h
src/model/: EpochSimulation.cpp  Model.cpp  State.cpp  StatisticCalculator.cpp
src/model/effects/: AllEffects.h  AverageSimmelianAlterEffect.cpp  AverageSimmelianAlterEffect.h  CovariateAndNetworkBehaviorEffect.cpp  (+20 more)
src/network/: IncidentTieIterator.cpp  IncidentTieIterator.h  Simmelian.cpp  Simmelian.h
src/sim/: MetropolisHastingsSimulation.cpp  MetropolisHastingsSimulation.h  Simulation.cpp  Simulation.h  StatisticsSimulation.cpp  StatisticsSimulation.h
src/utils/: Random.h
tests/: formula.R  parallel.R  parallel.Rout.save
(+56 files in other folders)
